--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container justify-content-center">
-    <a class="navbar-brand" href="#">Text Manager</a>
+    <a class="navbar-brand" href="#">Task Manager</a>
   </div>
 </nav>
